[tool.poetry]
name = "pyvial"
packages = [{include = "vial"}]
version = "1.1.0"
description = "A micro web framework for AWS Lambda."
license = "Apache-2.0"
authors = ["Michael Dimchuk <michaeldimchuk@gmail.com>"]
maintainers = ["Michael Dimchuk <michaeldimchuk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/michaeldimchuk/pyvial"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.971"
black = "^22.6.0"
pylint = "^2.14.5"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
bandit = "^1.7.4"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
coverage = "^6.4.4"
flake8-print = "^5.0.0"
flake8-comprehensions = "^3.10.0"
flake8-functions = "^0.0.7"
flake8-eradicate = "^1.3.0"
flake8-pie = "^0.16.0"
simplejson = "^3.17.6"
types-simplejson = "^3.17.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]
profile = "black"
line_length = 120
known_tests = ["tests"]
combine_as_imports = true

[tool.black]
line-length = 120

[tool.pylint.SIMILARITIES]
ignore-imports = "yes"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
min-public-methods = 1
function-rgx = "[a-z_][a-z0-9_]{1,40}$|()^test_[a-z_][a-z0-9_]{1,60}$"
method-rgx = "[a-z_][a-z0-9_]{1,40}$"
good-names = ["e", "i", "T", "E", "K", "V"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "E1101",  # no-member Broken with enums, this case is covered by mypy
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["vial"]

[tool.coverage.report]
exclude_lines = ["pass"]
precision = 2
fail_under = 100
