[tool.poetry]
name = "pyvial"
packages = [{include = "vial"}]
version = "1.3.0"
description = "A micro web framework for AWS Lambda."
license = "Apache-2.0"
authors = ["Michael Dimchuk <michaeldimchuk@gmail.com>"]
maintainers = ["Michael Dimchuk <michaeldimchuk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/michaeldimchuk/pyvial"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.linting.dependencies]
isort = "^5.12.0"
mypy = "^1.2.0"
black = "^23.3.0"
pylint = "^2.17.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
bandit = "^1.7.5"
flake8-print = "^5.0.0"
flake8-comprehensions = "^3.11.1"
flake8-functions = "^0.0.7"
flake8-pie = "^0.16.0"
types-simplejson = "^3.18.0.3"

[tool.poetry.group.testing.dependencies]
pytest = "^7.2.2"
simplejson = "^3.19.1"
coverage = {version = "^7.2.3", extras = ["toml"]}

[tool.poetry.group.local.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]
profile = "black"
line_length = 120
known_tests = ["tests"]
combine_as_imports = true

[tool.black]
line-length = 120

[tool.pylint.SIMILARITIES]
ignore-imports = "yes"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
min-public-methods = 1
function-rgx = "[a-z_][a-z0-9_]{1,40}$|()^test_[a-z_][a-z0-9_]{1,60}$"
method-rgx = "[a-z_][a-z0-9_]{1,40}$"
good-names = ["e", "i", "T", "E", "K", "V"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "E1101",  # no-member Broken with enums, this case is covered by mypy
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["vial"]

[tool.coverage.report]
exclude_lines = [
     # Allows the standard #pragma: no cover comment to disable coverage
    "#\\s*(pragma|PRAGMA)[:\\s]?\\s*(no|NO)\\s*(cover|COVER)",
    # Disables coverage on protocol classes, they have no implementations
    "class .*\\bProtocol\\):",
    # A pass statement has no implementation, doesn't need to be covered
    "pass",
    # A ... singleton is equivalent to pass, doesn't need to be covered
    "\\.\\.\\."
]
precision = 2
fail_under = 100
